apps/n8n/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    app: n8n
spec:
  selector:
    app: n8n
  type: ClusterIP
  ports:
    - port: 5678
      targetPort: 5678
