apps/n8n/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: n8n
spec:
  endpointSelector:
    matchLabels:
      app: n8n
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: eg-internal
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "5678"
